# frugal-lru-cache

./: .gitignore  AVLSlotTree.hpp  ArMap.hpp  BaseHashMap.hpp  BaseMap.h  BitScanner.cpp  BitScanner.h  CMakeLists.txt  FrugalResizer.hpp  HashMap.hpp  IResizer.h  LRU.hpp  List.hpp  MemInfo.cpp  MemInfo.h  PlanarCache.hpp  README.md  ResizeLogic.hpp  SimpleResizer.hpp  SlotBits.hpp  SlotLRU.hpp  SlotList.hpp  SlotMap.hpp  SlotTree.hpp  TODO.md  gtest_armap.cpp  gtest_bits.cpp  gtest_fresizer.cpp  gtest_hmap.cpp  gtest_list.cpp  gtest_lru.cpp  gtest_lru1.cpp  gtest_lru2.cpp  gtest_map.cpp  gtest_resize.cpp  gtest_smap.cpp  gtest_sresizer.cpp  lrucache.hpp  murmur.cpp  murmur.h  (+1 more)
experiments/: HashMap.hpp  LRU.hpp  SlotLRU.hpp  SlotList.hpp  gtest_list.cpp  gtest_lru1.cpp  gtest_lru2.cpp  gtest_slotlist.cpp
trees/: AvlTree.h  BaseBinaryTree.h  BinarySearchTree.h  BinarySearchTreeRecursive.h  BinaryTree.h  IBinarySearchTree.h  IBinaryTree.h  RedBlackTree.h  gtest_avl.cpp  gtest_redblack.cpp
